# chess-3d

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt
examples/src/: chess.cpp  ogre_bootstrap.cpp  ogre_tutorial1.cpp  ogre_tutorial2.cpp
resources/: bishop.b.mesh  bishop.w.mesh  black_mat.material  board.mesh  chess.scene  king.b.mesh  king.w.mesh  knight.b.mesh  knight.w.mesh  pawn.b.mesh  pawn.w.mesh  queen.b.mesh  queen.w.mesh  rook.b.mesh  rook.w.mesh  stone_chess_board_mat.material  white_mat.material
src/: ChessApp.cpp  ChessApp.hpp  OgreApp.cpp  OgreApp.hpp  UIOverlay.cpp  UIOverlay.hpp  app.cpp  app.hpp  chessEngine.cpp  chessEngine.hpp  engine.cpp  engine.hpp  main.cpp  overlay.cpp  overlay.hpp  overlayGUI.cpp  overlayGUI.hpp  theme.hpp
